--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">B<span class="text-ori">A</span>IJIT</h3>
             <ul>
@@ -20,6 +20,7 @@
                 <li><button class="btn-ori">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="bannner"></div>
     </header>
 
     <main>
